--- a/main.html
+++ b/main.html
@@ -9,6 +9,109 @@
   <body>
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
+		    
+      <tr>
+    <td>
+  <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
+     <thead>
+	<tr>
+    <th colspan="2">Nested Table 1</th>
+    </tr>
+		 <tr>
+   <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Data 1</td>
+                <td>Data 2</td>
+              </tr>
+              <tr>
+                <td>Data 3</td>
+                <td>Data 4</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+
+        <td>
+          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
+            <thead>
+              <tr>
+                <th colspan="2">Nested Table 2</th>
+              </tr>
+              <tr>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+              </tr>
+              <tr>
+                <td colspan="2" style="background-color:black; color:white; font-weight:bold;">HTML</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
+            <thead>
+              <tr>
+                <th colspan="2">Nested Table 3</th>
+              </tr>
+              <tr>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Apple</td>
+                <td>Banana</td>
+              </tr>
+              <tr>
+                <td>Cherry</td>
+                <td>Orange</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+
+        <td>
+          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
+            <thead>
+              <tr>
+                <th colspan="2">Nested Table 4</th>
+              </tr>
+              <tr>
+                <th>List</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="2">
+                  <ul style="list-style-type:square; text-align:left; margin-left:30px;">
+                    <li>List item 1</li>
+                    <li>List item 2</li>
+                    <li>List item 3</li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
     </table>
   </body>
 </html>
