--- a/main.html
+++ b/main.html
@@ -1,117 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-		    
-      <tr>
-    <td>
-  <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
-     <thead>
-	<tr>
-    <th colspan="2">Nested Table 1</th>
-    </tr>
-		 <tr>
-   <th>Column 1</th>
-                <th>Column 2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Data 1</td>
-                <td>Data 2</td>
-              </tr>
-              <tr>
-                <td>Data 3</td>
-                <td>Data 4</td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-
-        <td>
-          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
-            <thead>
-              <tr>
-                <th colspan="2">Nested Table 2</th>
-              </tr>
-              <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Row 1 Data 1</td>
-                <td>Row 1 Data 2</td>
-              </tr>
-              <tr>
-                <td colspan="2" style="background-color:black; color:white; font-weight:bold;">HTML</td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
-            <thead>
-              <tr>
-                <th colspan="2">Nested Table 3</th>
-              </tr>
-              <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Apple</td>
-                <td>Banana</td>
-              </tr>
-              <tr>
-                <td>Cherry</td>
-                <td>Orange</td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-
-        <td>
-          <table border="1" style="width:100%; border-collapse: collapse; text-align:center;">
-            <thead>
-              <tr>
-                <th colspan="2">Nested Table 4</th>
-              </tr>
-              <tr>
-                <th>List</th>
-                <th>Items</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td colspan="2">
-                  <ul style="list-style-type:square; text-align:left; margin-left:30px;">
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-    </table>
-  </body>
+<html lang ="en">
+	<head>
+		<meta charset = "UTF-8">
+		<meta name ="viewport"content ="width=device-width,intial-scale=1.0">
+		<title>Nested HTTML Tables</title>
+		<style> 
+		table,th,td{
+			border:2px solid black;
+			border-collapse : collapse;
+			padding:8px;
+			text-align:centre;
+		}
+			th{
+				background-color:#f2f2f2;
+			}
+			a{
+				color: purple;
+				text-decoration: underline;
+			
+			}
+			.black-cell{
+				background-color:black;
+				color:white:
+				font-weight:bold;
+				
+			}
+			ul{
+				text-align:left;
+				margin:0;
+				padding-left:25px;
+			}
+			</style>
+	</head>
+	<body>
+		<h1>Nested HTML Tables</h1>
+		<table style="width:80%;margin:auto;">
+			<tr>
+				<td style="width:50%;">
+					<table style="width:100%;>"
+						<tr>
+							<th colspan="2">Nested Table 2</th>
+			</tr>
+						<tr>
+							<td>abc</td>
+							<td>def</td>
+						</tr>
+					</table>
+				</td>
+				<td style ="width:50%;">
+					<table style ="width:100%;">
+						<tr>
+							<th>Nested Table 1</th>
+						</tr>
+						<tr>
+							<td>
+								<ul>
+									<li> List Item</li>
+									<li> List Item</li>
+									<li> List Item</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<table style="width:100%">
+						<tr>
+							<th colspan="2">Nested Table 3</th>
+						</tr
+							<tr>
+								<td><a href = "#">Nested Table</a></td>
+								<td> Demo Continued</td>
+							</tr>
+					</table>
+				</td>
+				<td>
+					<table style = "width:100%;">
+						<tr>
+							<th>Nested Table 4</th>
+						</tr>
+						<tr>
+							<td class = "black-cell">HTML</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
-    </table>
-  </body>
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
