--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             padding: 8px;
         }
         th {
-            background-color: #f2f2f2;
+            font-weight: bold;
         }
         a {
             color: purple;
@@ -52,6 +52,7 @@
                     </tr>
                 </table>
             </td>
+
             <td style="width:50%;">
                 <!-- Nested Table 1 -->
                 <table style="width:100%;">
@@ -85,7 +86,19 @@
                     </tr>
                 </table>
             </td>
+
             <td>
                 <!-- Nested Table 4 -->
                 <table style="width:100%;">
                     <tr>
+                        <th>Nested Table 4</th>
+                    </tr>
+                    <tr>
+                        <td class="black-cell">HTML</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
